--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,10 @@
 streamlit==1.29.0
-fastapi==0.111.1
+fastapi==0.104.1
 uvicorn[standard]==0.23.2
-pandas==2.1.1
-numpy==1.26.4
-scikit-learn==1.3.2
+pydantic==1.10.13
+pandas==1.5.3
+numpy==1.23.5
+scikit-learn==1.2.2
 joblib==1.3.2
-plotly==6.0.0
+python-multipart==0.0.6
 requests==2.31.0
-pydantic==2.5.1
-tpot>=0.12.0
-matplotlib>=3.5.0
-seaborn>=0.12.0
-email-validator>=2.0
