--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
-# requirements.txt (with Pydantic V1 compatibility)
+# requirements.txt - With FastAPI (Streamlit Cloud compatible)
 streamlit==1.29.0
-fastapi==0.104.1
-uvicorn[standard]==0.24.0
-pydantic==1.10.13
-pandas==2.2.1
+pandas==2.1.4
 numpy==1.26.4
 scikit-learn==1.4.0
 joblib==1.3.2
-python-multipart==0.0.6
-requests==2.31.0
-pydantic-settings==2.1.0
+matplotlib==3.8.3
+plotly==5.18.0
+seaborn==0.13.2
+fastapi==0.104.1
+uvicorn[standard]==0.24.0
+pydantic==1.10.13
