--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
-# requirements.txt - Streamlit Cloud Compatible
 streamlit==1.29.0
-pandas==1.5.3
-numpy==1.24.3
-scikit-learn==1.3.0
-joblib==1.3.2
-matplotlib==3.7.2
-seaborn==0.12.2
-plotly==5.15.0
+fastapi==0.109.2
+uvicorn[standard]==0.27.1
+pydantic==2.5.3
+pandas==2.2.2
+numpy==2.0.0
+scikit-learn==1.4.2
+joblib==1.4.2
+matplotlib==3.9.0
+seaborn==0.13.2
+plotly==5.19.0
